2008-01-15  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/GrampsDbUtils/_GrampsDbWriteXML.py
    * src/GrampsDbUtils/_WriteGedcom.py
    * src/plugins/ExportCSV.py
    * src/plugins/ExportVCalendar.py
    * src/plugins/ExportVCard.py
    * src/plugins/WriteCD.py
    * src/plugins/WriteFtree.py
    * src/plugins/WriteGeneWeb.py
    * src/plugins/WritePkg.py
    * src/PluginUtils/_PluginMgr.py: pylint fixes
    pylint fixes and work on 0001597 
    
2008-01-14  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/DbLoader.py: typo
	* src/plugins/ImportCSV.py: register text/csv as another mime type for csv
	0001410: Import auto-detect doesn't recognize csv
	* Changelog: fix format. Single tab before source files line, double space
	between date and name.
	
2008-01-14  Jerome Rapinat <romjerome@yahoo.fr>
	* data/man/fr/gramps.1.in: new man file

2008-01-12  Cedric Scott <cedric@not2.be>
            Benny Malengier <benny.malengier@gramps-project.org>
	* data/man/gramps.1.in: new man file

2008-01-14  Peter Landgren <peter.talken@telia.com>
	* _DateDisplay.py: ISO-date shows only year if month=0 and day=0

2008-01-13  Jerome Rapinat <romjerome@yahoo.fr>
	* Makefile.am
	* configure.in: remove gramps.spec references

2008-01-13  Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/_MenuOptions.py: Code cleanup.

2008-01-13  Gary Burton <gary.burton@zen.co.uk>
	* src/ManagedWindow.py: Revert last change.

2008-01-13  Jerome Rapinat <romjerome@yahoo.fr>
	* gramps.spec.in: remove file
	* FAQ: update file (wiki data) #1457

2008-01-13  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/gramps_main.py: Add dots to list of things in Betawarning
	to make it consistent
	* src/GrampsLogger/_ErrorReportAssistant.py: Disable sending emails to the 
	bug list and add button to file bug report on gramps issue tracker
	
2008-01-12  Brian Matherly <brian@gramps-project.org>
	* src/gramps_main.py: Enable the beta warning on startup.
