@@ -1,3 +1,6 @@
+2008-01-15  Benny Malengier <benny.malengier@gramps-project.org>
+	* src/ArgHandler.py: on autoload, do some extra checks first.
+
 2008-01-15  Raphael Ackermann <raphael.ackermann@gmail.com>
     * src/GrampsDbUtils/_GrampsDbWriteXML.py
     * src/GrampsDbUtils/_WriteGedcom.py
